package models

case class Party (id:Long,
                  name:String,
                  webPage:String,
                  isActive:Boolean)